# module
SET(MODULE_NAME app)

# 模块路径设置
SET(MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

# 包含目录
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Link Directories
LINK_DIRECTORIES(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

# AddFrameWork Macro
MACRO(ADD_FRAMEWORK fwname)
	SET(FRAMEWORKS "${FRAMEWORKS} -framework ${fwname}")
ENDMACRO(ADD_FRAMEWORK)

# 递归获取所有c++文件
FILE(GLOB_RECURSE HEADER_FILES *.h *.inl)
FILE(GLOB_RECURSE SOURCE_FILES *.cpp *.m *.mm)

SET(ALL_FILES ${HEADER_FILES} ${SOURCE_FILES})

# iOS平台资源
IF(LORD_BUILD_PLATFORM_IOS)
	SET(IOS_RESOURCE_FILES
		${MODULE_PATH}/frame/Platform/iOS/Icon.png
		${MODULE_PATH}/frame/Platform/iOS/launch.png
		${MODULE_PATH}/resources
	)

	#SOURCE_GROUP("Resources" FILES ${IOS_RESOURCE_FILES})
ENDIF()
#/
SET_SOURCE_FILES_PROPERTIES(${IOS_RESOURCE_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION resources)

# 分组
GROUP_FILES(ALL_FILES ${CMAKE_CURRENT_SOURCE_DIR})
	# add framework
	ADD_FRAMEWORK(MediaPlayer)
	ADD_FRAMEWORK(AudioToolbox)
	ADD_FRAMEWORK(CoreGraphics)
	ADD_FRAMEWORK(QuartzCore)
	ADD_FRAMEWORK(UIKit)
	ADD_FRAMEWORK(GLKit)
	ADD_FRAMEWORK(OpenGLES)
	ADD_FRAMEWORK(OpenAL)
	ADD_FRAMEWORK(CFNetwork)
	ADD_FRAMEWORK(MobileCoreServices)
	ADD_FRAMEWORK(SystemConfiguration)
	ADD_FRAMEWORK(AVFoundation)
	ADD_FRAMEWORK(AdSupport)
	ADD_FRAMEWORK(CoreFoundation)
	ADD_FRAMEWORK(CoreTelephony)
	ADD_FRAMEWORK(CoreText)
	ADD_FRAMEWORK(iAd)

	ADD_FRAMEWORK(StoreKit)
	ADD_FRAMEWORK(CoreData)
	ADD_FRAMEWORK(CoreMedia)
	ADD_FRAMEWORK(CoreMotion)
	ADD_FRAMEWORK(Security)

	#IF(LORD_PHYSICS_HAVOK)
	#ENDIF()

	SET(FRAMEWORKS "${FRAMEWORKS} -ObjC")
	SET(CMAKE_EXE_LINKER_FLAGS ${FRAMEWORKS})
	SET(CMAKE_OSX_ARCHITECTURES "${ARCHS_STANDARD}")

	ADD_EXECUTABLE(${MODULE_NAME} MACOSX_BUNDLE ${HEADER_FILES} ${SOURCE_FILES} ${IOS_RESOURCE_FILES} CMakeLists.txt)

	# Link C Library
	#TARGET_LINK_LIBRARIES(${MODULE_NAME} lua)

	SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${MODULE_PATH}/Frame/Platform/iOS/Info.plist)
	SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY[variant=Debug] "iPhone Developer:shuo zhang (KMY668K2JS)")
	SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY[variant=Release] "iPhone Developer:shuo zhang (KMY668K2JS)")
	SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES XCODE_ATTRIBUTE_PROVISIONING_PROFILE[variant=Debug] "bb1c4acc-2111-4504-a4eb-1a4ac4f26924")
	SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES XCODE_ATTRIBUTE_PROVISIONING_PROFILE[variant=Release] "bb1c4acc-2111-4504-a4eb-1a4ac4f26924")
	SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++14")
	SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2")
	SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_LAUNCHIMAGE_NAME "launch")


# 提示信息
MESSAGE(STATUS "Configure App success!")
